tests/ui/union.stderr
error: traits other then `Clone` and `Copy` aren't supported by unions
 --> tests/ui/union.rs:6:1
  |
6 | / union UnsupportedTrait<T> {
7 | |     a: Option<PhantomData<T>>,
8 | | }
  | |_^

error[E0277]: the trait bound `MissingCopy<T>: std::marker::Copy` is not satisfied
  --> tests/ui/union.rs:10:1
   |
10 | #[derive_where(Clone)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `MissingCopy<T>`
   |
note: required by a bound in `__AssertCopy`
  --> tests/ui/union.rs:10:1
   |
10 | #[derive_where(Clone)]
   | ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__AssertCopy`
   = note: this error originates in the derive macro `::derive_where::DeriveWhere` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MissingCopy<T>` with `#[derive(Copy)]`
   |
11 + #[derive(Copy)]
12 | union MissingCopy<T> {
   |
